apps/matomo/matomo-service.yaml
# Service Matomo
# ==============
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: matomo
spec:
  selector:
    app: matomo
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
